# ttt-server

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  ttt.sql
src/: main.rs
src/routes/: auth.rs  data.rs  elo.rs  email_verify.rs  email_verify_front.rs  game.rs  matchmaking.rs  mod.rs  user.rs
src/util/: email.rs  env.rs  error.rs  mod.rs  session.rs  tls.rs
ttt-db/: Cargo.toml
ttt-db/src/: lib.rs  ttt_db.rs
ttt-db/src/entity/: email_verification.rs  games.rs  mod.rs  prelude.rs  user_stats.rs  users.rs
ttt-db/src/model/: email_verification.rs  games.rs  matchmaking.rs  mod.rs  user.rs  user_data.rs
ttt-db/src/util/: mod.rs  range.rs  serializables.rs  time.rs  validators.rs
ttt-game-server/: Cargo.toml
ttt-game-server/src/: lib.rs
ttt-game-server/src/game/: command.rs  completed_game.rs  game.rs  game_state.rs  messages.rs  mod.rs
ttt-game-server/src/server/: messages.rs  mod.rs  server.rs
ttt-game-server/src/timer/: messages.rs  mod.rs  timer.rs
ttt-game-server/src/ws/: message.rs  mod.rs  server_response.rs  ws.rs
ttt-mailer/: Cargo.toml
ttt-mailer/src/: lib.rs
ttt-mailer/src/worker/: email_templates.rs  mail_worker.rs  messages.rs  mod.rs
ttt-matchmaking/: Cargo.toml
ttt-matchmaking/src/: lib.rs
ttt-matchmaking/src/worker/: matchmaking_worker.rs  messages.rs  mod.rs
ttt-matchmaking/src/ws/: message.rs  mod.rs  ws.rs
