[package]
name = "ttt-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
actix = "0.13.0"
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.9.1"
serde = "1.0.145"
serde_json = "1.0.85"
lazy_static = "1.4.0"
uuid = { version = "1.1.2", features = ["v4"] }
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }
actix-web-actors = "4.1.0"
redis = "0.21.6"

[dependencies.ttt-db]
path = "./ttt-db"

[dependencies.ttt-matchmaking]
path = "./ttt-matchmaking"

[dependencies.ttt-game-server]
path = "./ttt-game-server"

[dependencies.ttt-mailer]
path = "./ttt-mailer"