[package]
name = "ttt-server"
description = "Authoritative server for Tic Tac Toe game"
authors = ["Aleksandar Skoric <askoric@protonmail.com>"]
repository = "https://github.com/ace-skoric/ttt-server"
version = "1.0.0"
edition = "2021"
rust-version = "1.65"

[dependencies]
actix-web = "4.2.1"
actix = "0.13.0"
dotenv = "0.15.0"
log = "0.4.17"
env_logger = "0.10.0"
serde = "1.0.145"
serde_json = "1.0.85"
lazy_static = "1.4.0"
uuid = { version = "1.1.2", features = ["v4"] }
actix-session = { version = "0.7.2", features = ["redis-rs-session"] }
actix-web-actors = "4.1.0"
tinytemplate = "1.1"

[dependencies.ttt-db]
path = "./ttt-db"

[dependencies.ttt-matchmaking]
path = "./ttt-matchmaking"

[dependencies.ttt-game-server]
path = "./ttt-game-server"

[dependencies.ttt-mailer]
path = "./ttt-mailer"
