[package]
name = "ttt-db"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.145"
serde_json = "1.0.85"
serde_repr = "0.1.9"
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "1.1.2", features = ["serde", "v4"] }
regex = "1.6.0"
argonautica = "0.2.0"
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-actix-native-tls", "macros", "with-chrono", "with-uuid"], default-features = false }
redis = "0.21.6"
lazy_static = "1.4.0"
derive_more = "0.99.17"
petname = "1.1.2"
convert_case = "0.6.0"
skillratings = "0.13.0"
log = "0.4.17"