[package]
name = "ttt-db"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = "1.0.147"
serde_json = "1.0.87"
serde_repr = "0.1.9"
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "1.2.1", features = ["v4"] }
regex = "1.6.0"
sea-orm = { version = "0.10.1", features = ["sqlx-postgres", "runtime-actix-rustls", "macros", "with-chrono", "with-uuid"], default-features = false }
sea-query = "0.27.1"
redis = "0.22.1"
lazy_static = "1.4.0"
petname = "1.1.2"
convert_case = "0.6.0"
skillratings = "0.19.2"
log = "0.4.17"
rust-argon2 = "1.0.0"