[package]
name = "ttt-db"
version = "1.0.0"
edition = "2021"

[dependencies]
serde = "1.0.145"
serde_json = "1.0.85"
serde_repr = "0.1.9"
chrono = { version = "0.4.22", features = ["serde"] }
uuid = { version = "1.1.2", features = ["v4"] }
regex = "1.6.0"
sea-orm = { version = "0.10.4", features = ["sqlx-postgres", "runtime-actix-rustls", "macros", "with-chrono", "with-uuid"], default-features = false }
sea-query = "0.27.2"
redis = "0.21.6"
lazy_static = "1.4.0"
petname = "1.1.2"
convert_case = "0.6.0"
skillratings = "0.21.0"
log = "0.4.17"
rust-argon2 = "1.0.0"