[package]
name = "ttt-mailer"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
log = "0.4.17"
lettre = {version = "0.10.1", features = ["tokio1-native-tls"]}
uuid = { version = "1.2.1", features = ["v4"] }