[package]
name = "ttt-matchmaking"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
redis = "0.21.6"
chrono = { version = "0.4.22", features = ["serde"] }
tokio = "1.21.2"
log = "0.4.17"
env_logger = "0.9.1"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
actix-web-actors = "4.1.0"
serde = "1.0.145"
serde_json = "1.0.85"

[dependencies.ttt-db]
path = "../ttt-db"

[dependencies.ttt-game-server]
path = "../ttt-game-server"