[package]
name = "ttt-matchmaking"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
chrono = "0.4.22"
log = "0.4.17"
uuid = { version = "1.2.1", features = ["serde", "v4"] }
actix-web-actors = "4.1.0"
serde = "1.0.147"
serde_json = "1.0.87"

[dependencies.ttt-db]
path = "../ttt-db"

[dependencies.ttt-game-server]
path = "../ttt-game-server"